      software revision code)
	
Thu Sep 03 10:45:00 2002 <ddouxchamps@users.sf.net>
    * Bugfix in v1.30 format7 capture handshake. Thanks to Yasutoshi Onishi
      for pointing it out.

Thu Sep 09 12:00:00 2002 <ddouxchamps@users.sf.net>
    * more v1.30 handshake update

Fri Sep 10 11 12:00:00 2002 <ddouxchamps@users.sf.net>
    * even more v1.30 handshake update (now with proper error handling)

Sun Sep 22 17:30:00 2002 <ddouxchamps@users.sf.net>
    * added absolute feature setting functions. This is a first hack. 

Mon Sep 23 10:10:00 2002 <ddouxchamps@users.sf.net>
    * debugged absolute settings. Tested for shutter without problems.

Fri Sep 27 13:00:00 2002 <ddouxchamps@users.sf.net>
    * more v1.30 handshake update to handle backward compatibility
      with v1.20

Tue Oct 22 15:10:00 2002 <ddouxchamps@users.sf.net>
    * applied Christophe Achard patch, with some modifications.

Thu Oct 22 15:10:00 2002 <ddouxchamps@users.sf.net>
    * added "dc1394bool_t abs_control" to "dc1394_feature_info" struct
    * fixed, cleaned-up and finalized the absolute control code

Fri Oct 23 17:19:00 2002 <ddouxchamps@users.sf.net>
    * fixed missing <<16 shift in dc394_get_format7_unit_position

Sun Oct 27 00:13:00 2002 <dan@dennedy.org>
    * added examples/dc1394_vloopback.c to demonstrate how to make
      digital camera format0 a Video4Linux source.

Mon Nov 18 10:15:23 2002 <ddouxchamps@users.sf.net>
    * we now use packet_per_frame correctly for format7. This should
      fix 'walking' frames in DMA mode.
	
Mon Nov 20 10:35:00 2002 <ddouxchamps@users.sf.net>
    * Use a little trick from Martin Gramatke to avoid misinterpreta-
      tion of TOTAL_BYTES registers. We don't use the latter register
      anymore.
	
Wed Jul 2 14:35:00 2003 <ddouxchamps@users.sf.net>
    * fixed some F7 issues. Thanks to Kero van Gelder.
    * changed total_bytes to unsigned long long int in
      dc1394_query_format7_total_bytes.