@@ -341,49 +341,40 @@ _dc1394_basic_format7_setup(raw1394handle_t handle, nodeid_t node,
   int version;
   int color_coding;
 
-  if (dc1394_get_iso_status(handle, node, &is_iso_on) != DC1394_SUCCESS)
-      return DC1394_FAILURE;
+  if (dc1394_get_iso_status(handle, node, &is_iso_on) != DC1394_SUCCESS) {
+    return DC1394_FAILURE;
+  }
 
-  if (is_iso_on)
-  {
-
-    if (dc1394_stop_iso_transmission(handle, node) != DC1394_SUCCESS)
-    {
+  if (is_iso_on) {
+    if (dc1394_stop_iso_transmission(handle, node) != DC1394_SUCCESS) {
       printf("(%s) Unable to stop iso transmission!\n", __FILE__);
       return DC1394_FAILURE;
     }
-
   }
-  if (dc1394_set_iso_channel_and_speed(handle,node,channel,speed)!=DC1394_SUCCESS)
-  {
+
+  if (dc1394_set_iso_channel_and_speed(handle,node,channel,speed)!=DC1394_SUCCESS) {
     printf("(%s) Unable to set channel %d and speed %d!\n",__FILE__,channel,speed);
     return DC1394_FAILURE;
   }
 
-  if (dc1394_set_video_format(handle,node,FORMAT_SCALABLE_IMAGE_SIZE)!=DC1394_SUCCESS)
-  {
+  if (dc1394_set_video_format(handle,node,FORMAT_SCALABLE_IMAGE_SIZE)!=DC1394_SUCCESS) {
     printf("(%s) Unable to set video format %d!\n",__FILE__, FORMAT_SCALABLE_IMAGE_SIZE);
     return DC1394_FAILURE;
   }
-
-  if (dc1394_set_video_mode(handle, node,mode) != DC1394_SUCCESS)
-  {
+  
+  if (dc1394_set_video_mode(handle, node,mode) != DC1394_SUCCESS) {
     printf("(%s) Unable to set video mode %d!\n", __FILE__, mode);
     return DC1394_FAILURE;
   }
-
+  
   /*-----------------------------------------------------------------------
    *  set image position. If QUERY_FROM_CAMERA was given instead of a
    *  position, use the actual value from camera
    *-----------------------------------------------------------------------*/
-  if( left == QUERY_FROM_CAMERA || top == QUERY_FROM_CAMERA)
-  {
+  if( left == QUERY_FROM_CAMERA || top == QUERY_FROM_CAMERA) {
     unsigned int camera_left = 0;
     unsigned int camera_top = 0;
-    if (dc1394_query_format7_image_position(handle, node, mode,
-                                            &camera_left, &camera_top)
-        != DC1394_SUCCESS)
-    {
+    if (dc1394_query_format7_image_position(handle, node, mode, &camera_left, &camera_top) != DC1394_SUCCESS) {
       printf("(%s) Unable to query image position\n", __FILE__);
       return DC1394_FAILURE;
     }
@@ -391,9 +382,8 @@ _dc1394_basic_format7_setup(raw1394handle_t handle, nodeid_t node,
     if( left == QUERY_FROM_CAMERA) left = camera_left;
     if( top == QUERY_FROM_CAMERA)  top = camera_top;
   }
-
-  if (dc1394_set_format7_image_position(handle, node, mode, left, top) != DC1394_SUCCESS)
-  {
+  
+  if (dc1394_set_format7_image_position(handle, node, mode, left, top) != DC1394_SUCCESS) {
     printf("(%s) Unable to set format 7 image position to "
            "left=%d and top=%d!\n",  __FILE__, left, top);
     return DC1394_FAILURE;
@@ -403,17 +393,13 @@ _dc1394_basic_format7_setup(raw1394handle_t handle, nodeid_t node,
    *  If QUERY_FROM_CAMERA was given instead of an image size
    *  use the actual value from camera.
    *-----------------------------------------------------------------------*/
-  if( width == QUERY_FROM_CAMERA || height == QUERY_FROM_CAMERA)
-  {
+  if( width == QUERY_FROM_CAMERA || height == QUERY_FROM_CAMERA) {
     unsigned int camera_width = 0;
     unsigned int camera_height = 0;
-    if (dc1394_query_format7_image_size(handle, node, mode,
-					&camera_width, &camera_height)
-        != DC1394_SUCCESS)
-      {
-	printf("(%s) Unable to query image size\n", __FILE__);
-	return DC1394_FAILURE;
-      }
+    if (dc1394_query_format7_image_size(handle, node, mode, &camera_width, &camera_height) != DC1394_SUCCESS) {
+      printf("(%s) Unable to query image size\n", __FILE__);
+      return DC1394_FAILURE;
+    }
     
     if (width == QUERY_FROM_CAMERA)   width  = camera_width;
     if (height == QUERY_FROM_CAMERA)  height = camera_height;
@@ -424,112 +410,88 @@ _dc1394_basic_format7_setup(raw1394handle_t handle, nodeid_t node,
    *  If USE_MAX_AVAIL was given instead of an image size
    *  use the max image size for the given image position
    *-----------------------------------------------------------------------*/
-  if( width == USE_MAX_AVAIL || height == USE_MAX_AVAIL)
-  {
+  if( width == USE_MAX_AVAIL || height == USE_MAX_AVAIL) {
     unsigned int max_width = 0;
     unsigned int max_height = 0;
-    if (dc1394_query_format7_max_image_size(handle, node, mode,
-                                            &max_width, &max_height)
-        != DC1394_SUCCESS)
-      {
-	printf("(%s) Unable to query max image size\n", __FILE__);
-	return DC1394_FAILURE;
-      }
+    if (dc1394_query_format7_max_image_size(handle, node, mode, &max_width, &max_height) != DC1394_SUCCESS) {
+      printf("(%s) Unable to query max image size\n", __FILE__);
+      return DC1394_FAILURE;
+    }
     if( width == USE_MAX_AVAIL)  width  = max_width - left;
     if( height == USE_MAX_AVAIL) height = max_height - top;
     
   }
 
-  if (dc1394_set_format7_image_size(handle, node, mode, width, height) != DC1394_SUCCESS)
-    {
-      printf("(%s) Unable to set format 7 image size to "
-	     "width=%d and height=%d!\n", __FILE__, width, height);
-      return DC1394_FAILURE;
-    }
+  if (dc1394_set_format7_image_size(handle, node, mode, width, height) != DC1394_SUCCESS) {
+    printf("(%s) Unable to set format 7 image size to width=%d and height=%d!\n", __FILE__, width, height);
+    return DC1394_FAILURE;
+  }
   
-  if (dc1394_query_format7_recommended_byte_per_packet(handle, node, mode, &recom_bpp) != DC1394_SUCCESS)
-    {
-      printf("Recommended byte-per-packet inq error\n");
+  if (dc1394_query_format7_recommended_byte_per_packet(handle, node, mode, &recom_bpp) != DC1394_SUCCESS) {
+    printf("Recommended byte-per-packet inq error\n");
+    return DC1394_FAILURE;
+  }
+  
+  if (dc1394_query_format7_packet_para(handle, node, mode, &min_bytes, &max_bytes) != DC1394_SUCCESS) { /* PACKET_PARA_INQ */
+    printf("Packet para inq error\n");
+    return DC1394_FAILURE;
+  }
+
+  //fprintf(stderr,"recommended bpp: %d\n",recom_bpp);
+  
+  switch (bytes_per_packet) {
+  case USE_RECOMMENDED:
+    if (recom_bpp>0) {
+      bytes_per_packet=recom_bpp;
+    }
+    else { // recom. bpp asked, but register is 0. IGNORED
+      printf("(%s) Recommended bytes per packet asked, but register is zero. Falling back to MAX BPP for mode %d \n", __FILE__, mode);
+      bytes_per_packet=max_bytes;
+    }
+    break;
+  case USE_MAX_AVAIL:
+    bytes_per_packet = max_bytes;
+    break;
+  case QUERY_FROM_CAMERA:
+    if (dc1394_query_format7_byte_per_packet(handle, node, mode, &bytes_per_packet) != DC1394_SUCCESS) {
+      printf("(%s) Bytes_per_packet query failure\n", __FILE__);
       return DC1394_FAILURE;
     }
-
-  if (bytes_per_packet == USE_RECOMMENDED)
-    {
-      if (recom_bpp>0)
-	{
-	  if (dc1394_set_format7_byte_per_packet(handle, node, mode, recom_bpp) != DC1394_SUCCESS)
-	    {
-	      printf("(%s) Unable to set format 7 bytes per packet to recommended for mode %d \n", __FILE__, mode);
-	      return DC1394_FAILURE;
-	    }
-	}
-      else
-	{
-	  // recom. bpp asked, but register is 0. IGNORED
-	  printf("(%s) Recommended bytes per packet asked, but register is zero. Falling back to MAX BPP for mode %d \n", 
-		 __FILE__, mode);
-	  bytes_per_packet=USE_MAX_AVAIL;
-	}
+    break;
+  default:
+    if (bytes_per_packet > max_bytes) {
+      bytes_per_packet = max_bytes;
     }
-  if (bytes_per_packet > USE_RECOMMENDED) // max avail, or user setup
-    {
-      if (dc1394_query_format7_packet_para(handle, node, mode, &min_bytes, &max_bytes) != DC1394_SUCCESS) /* PACKET_PARA_INQ */
-	{
-	  printf("Packet para inq error\n");
-	  return DC1394_FAILURE;
-	}
-      
-      /*-----------------------------------------------------------------------
-       *  if -1 is given for bytes_per_packet, use maximum allowed packet
-       *  size. if given bytes_per_packet exceeds allowed range, correct it 
-       *-----------------------------------------------------------------------*/
-      if( bytes_per_packet == USE_MAX_AVAIL)
-	{
-	  bytes_per_packet = max_bytes;
-	}
-      else
-	if (bytes_per_packet > max_bytes)
-	  {
-	    bytes_per_packet = max_bytes;
-	  }
-	else
-	  if (bytes_per_packet < min_bytes)
-	    {
-	      bytes_per_packet = min_bytes;
-	    }
-
-      /*
-       * TODO: bytes_per_packet must be full quadlet
-       */
-      //printf( "Trying to set bytes per packet to %d\n",  bytes_per_packet);
-      
-      if (dc1394_set_format7_byte_per_packet(handle, node, mode, bytes_per_packet) != DC1394_SUCCESS)
-	{
-	  printf("(%s) Unable to set format 7 bytes per packet %d \n", __FILE__, mode);
-	  return DC1394_FAILURE;
-	}
+    else {
+      if (bytes_per_packet < min_bytes) {
+	bytes_per_packet = min_bytes;
+      }
     }
+    break;
+  }
+      
+  //printf( "Trying to set bytes per packet to %d\n",  bytes_per_packet);
+    
+  if (dc1394_set_format7_byte_per_packet(handle, node, mode, bytes_per_packet) != DC1394_SUCCESS) {
+    printf("(%s) Unable to set format 7 bytes per packet %d \n", __FILE__, mode);
+    return DC1394_FAILURE;
+  }
 
   // IIDC v1.30 handshaking:
-  if ( _dc1394_v130_handshake(handle, node, mode) != DC1394_SUCCESS)
-    {
-      printf("(%s) Format7 handshaking failure \n", __FILE__);
-      return DC1394_FAILURE;
-    }
+  if ( _dc1394_v130_handshake(handle, node, mode) != DC1394_SUCCESS) {
+    printf("(%s) Format7 handshaking failure \n", __FILE__);
+    return DC1394_FAILURE;
+  }
 
-  if (dc1394_query_format7_byte_per_packet(handle, node, mode, &packet_bytes) == DC1394_SUCCESS)
-  {
+  if (dc1394_query_format7_byte_per_packet(handle, node, mode, &packet_bytes) == DC1394_SUCCESS) {
     camera->quadlets_per_packet= packet_bytes /4;
-    if (camera->quadlets_per_packet<=0)
-    {
+    if (camera->quadlets_per_packet<=0) {
       printf("(%s) No format 7 bytes per packet %d \n", __FILE__, mode);
       return DC1394_FAILURE;
     }
-    //printf("Camera has now %d bytes per packet\n\n", packet_bytes);
-    
+    //printf("Camera has now %d bytes per packet\n", packet_bytes);
   }
-  else
-  {
+  else {
     printf("(%s) Unable to get format 7 bytes per packet %d \n", __FILE__, mode);
     return DC1394_FAILURE;
   }
@@ -541,7 +503,6 @@ _dc1394_basic_format7_setup(raw1394handle_t handle, nodeid_t node,
   camera->frame_rate = 0; 
   camera->channel=channel;
   
-  
   /*-----------------------------------------------------------------------
    *  ensure that quadlet aligned buffers are big enough, still expect
    *  problems when width*height  != quadlets_per_frame*4
@@ -552,59 +513,49 @@ _dc1394_basic_format7_setup(raw1394handle_t handle, nodeid_t node,
   }
   else {
     if (version == 0x000102UL) { // if version is 1.30
-      if (dc1394_query_format7_packet_per_frame(handle, node, mode, &packets_per_frame)!=DC1394_SUCCESS)
-	{
-	  printf("(%s) Unable to get format 7 packets per frame %d \n", __FILE__, mode);
-	  return DC1394_FAILURE;
-	}
+      if (dc1394_query_format7_packet_per_frame(handle, node, mode, &packets_per_frame)!=DC1394_SUCCESS) {
+	printf("(%s) Unable to get format 7 packets per frame %d \n", __FILE__, mode);
+	return DC1394_FAILURE;
+      }
       camera->quadlets_per_frame=(packets_per_frame*packet_bytes)/4;
     }
     else {
       // For other specs revisions, we use a trick to determine the total bytes.
       // We don't use the total_bytes register in 1.20 as it has been interpreted in
       // different ways by manufacturers. Thanks to Martin Gramatke for pointing this trick out.
-      if (dc1394_query_format7_color_coding_id(handle, node, mode, &color_coding)!=DC1394_SUCCESS)
-	{
-	  printf("(%s) Unable to get format 7 color coding for mode %d \n", __FILE__, mode);
-	  return DC1394_FAILURE;
-	}
-      else
-	{
-	  //fprintf(stderr,"color coding: %d\n",color_coding);
-	  packets_per_frame = ((int)(width * height * _Format7BytePerPixel(color_coding)) +
-			       bytes_per_packet -1) / bytes_per_packet;
-	  camera->quadlets_per_frame=(packets_per_frame*bytes_per_packet)/4;
-	}
+      if (dc1394_query_format7_color_coding_id(handle, node, mode, &color_coding)!=DC1394_SUCCESS) {
+	printf("(%s) Unable to get format 7 color coding for mode %d \n", __FILE__, mode);
+	return DC1394_FAILURE;
+      }
+      else {
+	//fprintf(stderr,"color coding: %d\n",color_coding);
+	packets_per_frame = ((int)(width * height * _Format7BytePerPixel(color_coding)) +
+			     bytes_per_packet -1) / bytes_per_packet;
+	camera->quadlets_per_frame=(packets_per_frame*bytes_per_packet)/4;
+      }
       /*
-      if (dc1394_query_format7_total_bytes(handle, node, mode,
-                                           &camera->quadlets_per_frame)!= DC1394_SUCCESS)
-	{
+	if (dc1394_query_format7_total_bytes(handle, node, mode, &camera->quadlets_per_frame)!= DC1394_SUCCESS) {
 	  printf("(%s) Unable to get format 7 total bytes per frame %d \n", __FILE__, mode);
 	  return DC1394_FAILURE;
 	}
-      camera->quadlets_per_frame/=4;
+	camera->quadlets_per_frame/=4;
       */
       //fprintf(stderr,"quadlets per frame: %d\n",camera->quadlets_per_frame);
     }
   }
-  if (camera->quadlets_per_frame<=0)
-  {
+  if (camera->quadlets_per_frame<=0) {
     return DC1394_FAILURE;
   }
   camera->frame_width = width; /* irrespective of pixel depth */
   camera->frame_height= height;
 
-  if (is_iso_on)
-  {
-    
-    if (dc1394_start_iso_transmission(handle,node) != DC1394_SUCCESS)
-    {
+  if (is_iso_on){
+    if (dc1394_start_iso_transmission(handle,node) != DC1394_SUCCESS) {
       printf("(%s) Unable to start iso transmission!\n", __FILE__);
       return DC1394_FAILURE;
     }
-    
   }
-  
+
   return DC1394_SUCCESS;
 }
 
